--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@binance/connector": "^1.5.0",
     "@sendgrid/mail": "^7.4.4",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "config": "^3.3.0",
+    "crypto": "^1.0.1",
     "dotenv-extended": "^2.7.1",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
@@ -28,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.9.5",
+    "node-binance-api": "^0.13.0",
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
